--- a/bento-grid-main/style.css
+++ b/bento-grid-main/style.css
@@ -22,6 +22,7 @@
 
 .container {
     padding-left:200px;
+    padding-right: 50px;
     padding-top: 30px;
     padding-bottom: 30px;
     flex-wrap: wrap;
@@ -200,6 +201,7 @@ div img {
         gap: 18px;
         padding-left: 0;
         width: 100vw;
+        padding-right: 50px;
     }
 
     div img {
@@ -214,8 +216,8 @@ div img {
         padding-left: 15px;
         padding-right: 15px;
         gap: 20px;
-        overflow:hidden
- 
+        overflow:hidden;
+        text-align: center;
     }
 
     .div1 p, .div2 p, .div3 p, .div4 p, .div5 p, .div6 p, .div7 p, .div8 p {
@@ -229,7 +231,7 @@ div img {
     img {
         max-width: 55%;
         height: auto;
-        margin-left: 30px;
+        margin-left: 50px;
     }
 
     .container  div {
@@ -240,31 +242,30 @@ div img {
 
 }
 
-@media ( min-width:768px) and (max-width: 1176px) {
+@media ( min-width:768px) and (max-width: 1224px) {
    .container {  
     display: grid;
-    grid-template-columns:  3fr 5fr ;
-    column-gap: 50px;
-    
-
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 20px 50px;
+    padding-right: 50px;
 
    }
 
    .div1, .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
     width: 100%; 
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0;
+    margin: 0;
+    padding: 15px;
     overflow: hidden;
-    gap: 80px;
+
 
 }
 img {
     max-width: 60%;
-
     height: auto;
     margin-left: 30px;
+    object-fit: cover;
 }
 
 }
